sjengida/c3/see
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/see/src/see.c:736:17: error: use of undeclared identifier 'dword_666668'
v25 = -material[dword_666668[32 * v23 + 2 * v24]]; 
                ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/see/src/see.c:738:16: error: use of undeclared identifier 'dword_666668'
v25 = material[dword_666668[32 * ( unsigned __int64)( v10 == 0) + 2 * v24]]; 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/see/src/obj/see.o] Error 1
